<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.inventoryapp.ProductDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/productname_label"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textview_productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="2dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/productquantity_label"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textview_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="2dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/editquantity_label"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edittext_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editquantity_hint"
                android:inputType="number"
                android:paddingBottom="8dp"
                android:paddingLeft="2dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/productprice_label"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textview_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="2dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/productimage_label"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/noimage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/UpdateProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="UpdateQuantity"
                android:padding="8dp"
                android:text="@string/updateproductquantity"
                android:textSize="18dp" />

            <Button
                android:id="@+id/OrderMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="SendEmailToSupplier"
                android:padding="8dp"
                android:text="@string/ordermore"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DeleteProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="DeleteProduct"
                android:padding="8dp"
                android:text="@string/deleteproductbutton"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>